cabal-version:      2.4
name:               zen
version:            0.1.0.0
author:             Iavor Diatchki
maintainer:         iavor.diatchki@gmail.com

extra-source-files:
  CHANGELOG.md
  src/Zen.z3

executable zen
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
      Zen
      ModelUI
      Options
      Parser
    build-depends:
      base ^>=4.14.3.0,
      containers,
      simple-smt,
      tf-random,
      haskeline,
      ansi-terminal,
      simple-get-opt,
      array
    build-tool-depends: happy:happy
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions:
      OverloadedStrings, TemplateHaskell, ImplicitParams, BlockArguments,
      TypeSynonymInstances, FlexibleInstances
